# QCompute

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  setup.py
DocRelease/: 异常信息翻译对照.toml  异常信息自动输出.csv  异常信息自动输出.xlsx
Example/Level_1/: ComputeQASM_Local.py  GHZ_Cloud.py  GHZ_Local.py  HCNOT_Cloud.py  HCNOT_Local.py  Hybrid_Cloud.py  Hybrid_Local.py  Interact_Cloud.py  Interact_Local.py  IoPCAS.py  Module.py  PhotonicFockCase_local.py  PhotonicGaussianCase_local.py  QPUCase_BaiduQPUQian.py  QPUCase_IoPCAS.py  QPUCase_IonAPM.py  SimulatorCase_CuQuantum_Local.py  Ubqc.py
Example/Level_1/Noise/: AddNoise.py  CompressNoiseModuleTest.py  CompressNoiseTest.py  OneQubitNoiseTest.py  ParallelNoiseSimulationTest.py  TwoQubitNoiseTest.py
Example/Level_2/0_OutputFormatControl/: 0_OutputFormatControl.py  1_AutoClearOutputDir.py
Example/Level_2/1_OpenModules/: 0_OpenModules.py  1_InverseCircuitModule.py  2_ReverseCircuitModule.py  3_UnrollProcedureModule.py  4_UnrollCircuitModule.py  5_CompressGateModule.py
Example/Level_2/2_OpenConvertors/: 0_Circuit.py  1_DrawConsole.py  2_InternalStruct.py  3_JSON.py  4_QASM.py  5_Qobj.py  6_IonQ.py  7_XanaduSF.py
Example/Level_2/Deutsch-Jozsa/: Deutsch-Jozsa.py
Example/Level_2/Grover/: Grover.py
Example/Level_2/SuperdenseCoding/: Superdense.py
Example/Level_3/0_SuperdenseCoding/: Superdense.py
Example/Level_3/1_Deutsch-Jozsa/: Deutsch-Jozsa.py
Example/Level_3/2_PhaseEstimation/: Phase.py
Example/Level_3/3_Grover/: Grover.py  Grover_3qubit.py
Example/Level_3/4_ShorAlgorithm/: OrderFinding2mod63_CN.py  OrderFinding2mod63_EN.py  ShorAlgorithmLocal.py
Example/Level_3/5_VQE/: VQE.py
Example/Level_3/6_VQSD/: VQSD.py
Example/Level_3/PhaseEstimation/: Phase.py
Example/Level_3/Shor'sAlgorithm/: OrderFinding2mod63_CN.py  OrderFinding2mod63_EN.py  Shor'sAlgorithmLocal.py
Example/Level_3/VQE/: VQE.py
Example/Level_3/VQSD/: VQSD.py
Example/QAPP/: README.md  README_CN.md  requirements.txt
Example/QAPP/qapp/: __init__.py
Example/QAPP/tutorials/: Kernel_Classifier_CN.md  Kernel_Classifier_EN.md  Max_Cut_CN.md  Max_Cut_EN.md  VQE_CN.md  VQE_EN.md  kernel_classifier_example.py  max_cut_example.py  vqe_example.py
ExampleOnline/: syncToBOS.develop
ExampleOnline/Researcher/: CloudTest.py  Deutsch-Jozsa.py  Grover.py  Superdense.py
ExampleOnline/Starter/: GHZ_Cloud.py  HCNOT_Cloud.py  Hybrid_Cloud.py
Extensions/QuantumApp/: README.md  README_CN.md  requirements.txt  setup.py
Extensions/QuantumApp/qcompute_qapp/: __init__.py
Extensions/QuantumApp/tutorials/: Bell's_Inequality_CN.md  Bell's_Inequality_EN.md  Kernel_Classifier_CN.md  Kernel_Classifier_EN.md  Max_Cut_CN.md  Max_Cut_EN.md  Superdense_Coding_CN.md  Superdense_Coding_EN.md  Teleportation_CN.md  Teleportation_EN .md  VQE_CN.md  VQE_EN.md  bell's_inequality_example.py  kernel_classifier_example.py  (+4 more)
Extensions/QuantumErrorProcessing/: CHANGELOG.md  LICENSE  README.md  setup.py
Extensions/QuantumNetwork/: LICENSE  README.md  setup.py
Extensions/QuantumSingularValueTransformation/: .gitignore  CHANGELOG.md  README.md  setup.py
Extensions/QuantumSingularValueTransformation/qcompute_qsvt/SymmetricQSP/SymmetricQSPInternalCppSrc/: CMakeLists.txt  common.hpp  main.cpp  profiler.hpp  readme-centos.txt  readme-macos.txt  readme-ubuntu.txt
Extensions/QuantumSingularValueTransformation/qcompute_qsvt/SymmetricQSP/SymmetricQSPInternalCppSrc/cmake/Modules/: FindMKL.cmake
LICENSES/OpenQASM/: LICENSE.txt
LICENSES/QASM-Grammar/: LICENSE.txt
QCompute/: __init__.py
QCompute/Calibration/: __init__.py
QCompute/Define/: Settings.py  TrimFlag.py  Utils.py  __init__.py
QCompute/Module/: __init__.py
QCompute/OpenConvertor/: __init__.py
QCompute/OpenModule/: __init__.py
QCompute/OpenService/: __init__.py
QCompute/OpenSimulator/: __init__.py
QCompute/QPlatform/: BatchID.py  CircuitTools.py  Error.py  InteractiveModule.py  ProcedureParameterExpression.py  ProcedureParameterPool.py  QEnv.py  QEnvOperation.py  QRegPool.py  QStatus.py  QTask.py  Utilities.py  __init__.py
QCompute/QProtobuf/: __init__.py
QCompute/QuantumPlatform/: Error.py  ProcedureParams.py  QuantumEnvironment.py  QuantumRegisters.py  QuantumTask.py  Utilities.py  __init__.py
QCompute/Test/: __init__.py
QCompute/Utilize/: __init__.py
Requirements/: requirements.txt
Test/: BaseSettings.py
Test/Noise/: CompressNoiseModuleTest.py  CompressNoiseTestLocal.py  NoiseArguementTestLocal.py  NoiseTestLocal.py  OneQubitNoiseTestLocal.py  ParallelNoiseSimulationTestLocal.py  SpecificNoisyCircuitLocal.py  TwoQubitNoiseTestLocal.py
Test/PostInstall/: CloudFullTest.py  LocalGateTest.py  LocalNoiseTest.py  PostInstall_test.py
(+1713 files in other folders)
